--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,18 +1,22 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title text-center="">
       Login Page
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding center text-center="">
     <ion-list>
       <ion-item>
         <ion-input placeholder="Username"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input placeholder="Password"></ion-input>
+        <ion-input placeholder="Password" type="password"></ion-input>
       </ion-item>
     </ion-list>
+
+  <ion-button fill="solid">Login</ion-button>
+  <ion-button fill="solid" color="success">Register</ion-button>
+
 </ion-content>
