--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,13 @@
 .welcome-card img {
   max-height: 35vh;
   overflow: hidden;
+
 }
+
+.list-md {
+  margin-top: 30vh;
+  margin-bottom: 5vh;
+
+}
+
+
