--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,16 +7,17 @@
 </ion-header>
 
 <ion-content padding center text-center="">
+  <ion-title>Kai King</ion-title>
     <ion-list>
       <ion-item>
-        <ion-input placeholder="Username"></ion-input>
+        <ion-input placeholder="Username" [(ngModel)]="username"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-input placeholder="Password" type="password"></ion-input>
+        <ion-input placeholder="Password" type="password" [(ngModel)]="password"></ion-input>
       </ion-item>
     </ion-list>
 
-  <ion-button fill="solid">Login</ion-button>
-  <ion-button fill="solid" color="success">Register</ion-button>
+  <ion-button fill="solid" (click)="login()">Login</ion-button>
+  <ion-button fill="solid" color="light" (click)="goRegister()">Register</ion-button>
 
 </ion-content>
