Got page navigation for register button working

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,5 +19,6 @@
 
   <ion-button fill="solid" (click)="login()">Login</ion-button>
   <ion-button fill="solid" color="light" (click)="goRegister()">Register</ion-button>
+  <!--<ion-button fill="solid" color="light" [routerLink]="'/register'" routerDirection="forward">Register</ion-button>-->
 
 </ion-content>
