Added alert feature to register button on register page

--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,3 +1,4 @@
+
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -7,6 +8,22 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <ion-title text-center="">Join our whanau!</ion-title>
+  <ion-list>
+    <ion-item>
+      <ion-input placeholder="Username" [(ngModel)]="username"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input placeholder="Password" type="password" [(ngModel)]="password"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input placeholder="Repeat Password" type="password" [(ngModel)]="repassword"></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <ion-button fill="solid" (click)="register()">Register</ion-button>
+
+
 
 </ion-content>
