--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -12,10 +12,10 @@
   <ion-title text-center="">Join our whanau!</ion-title>
   <ion-list>
     <ion-item>
-      <ion-input placeholder="Username" [(ngModel)]="username"></ion-input>
+      <ion-input placeholder="Username" [(ngModel)]="newUser.username"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input placeholder="Password" type="password" [(ngModel)]="password"></ion-input>
+      <ion-input placeholder="Password" type="password" [(ngModel)]="newUser.password"></ion-input>
     </ion-item>
     <ion-item>
       <ion-input placeholder="Repeat Password" type="password" [(ngModel)]="repassword"></ion-input>
@@ -26,4 +26,8 @@
 
 
 
+
+
 </ion-content>
+
+
