Got empty field to work but not satisfied with code structure

--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -22,7 +22,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-button fill="solid" (click)="register()">Register</ion-button>
+  <ion-button fill="solid" (click)="checkInput()">Register</ion-button>
 
 
 
