--- a/src/app/pages/login-page/login.page.html
+++ b/src/app/pages/login-page/login.page.html
@@ -1,14 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title text-center="">
-      Login Page
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<!--<ion-header>-->
+  <!--<ion-toolbar>-->
+    <!--<ion-title text-center="">-->
+      <!--Login Page-->
+    <!--</ion-title>-->
+  <!--</ion-toolbar>-->
+<!--</ion-header>-->
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+</head>
 
-<ion-content padding center text-center="">
-  <ion-title>Kai King</ion-title>
-    <ion-list>
+<ion-content text-center="">
+
+  <img src="../assets/icon/logo.png"/>
+  <ion-title color="text-color">Kai King</ion-title>
+
+  <ion-list>
       <ion-item>
         <ion-input placeholder="Username" [(ngModel)]="currentUser.username"></ion-input>
       </ion-item>
@@ -20,6 +26,7 @@
   <ion-button fill="solid" (click)="login(currentUser)">Login</ion-button>
   <ion-button fill="solid" color="light" (click)="register()">Register</ion-button>
   <ion-button fill="solid" color="light" (click)="resetPassword()">Forgotten Password</ion-button>
+
 
   <!--<ion-button fill="solid" color="light" [routerLink]="'/register'" routerDirection="forward">Register</ion-button>-->
 
