--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tabs</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="feed">
+      <ion-icon name="information-circle"></ion-icon>
+      <ion-label>Feed</ion-label>
+    </ion-tab-button>
 
-<ion-content>
+    <ion-tab-button tab="uploader">
+      <ion-icon name="information-circle"></ion-icon>
+      <ion-label>Uploader</ion-label>
+    </ion-tab-button>
 
-</ion-content>
+    <ion-tab-button tab="profile">
+      <ion-icon name="information-circle"></ion-icon>
+      <ion-label>Profile</ion-label>
+    </ion-tab-button>
+
+  </ion-tab-bar>
+
+</ion-tabs>
