Can upload something to firebase...not photos yet

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref='tabs'></ion-back-button>
     </ion-buttons>
-    <ion-title>register</ion-title>
+    <p>Login</p>
   </ion-toolbar>
 </ion-header>
 
