--- a/src/app/pages/uploader/uploader.page.html
+++ b/src/app/pages/uploader/uploader.page.html
@@ -1,9 +1,12 @@
-<ion-header>
+<ion-header xmlns="http://www.w3.org/1999/html">
   <ion-toolbar>
-    <ion-title>uploader</ion-title>
+    <ion-title>Upload Image</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <div class="camera"></div>
+  <input type="file" (change)="fileChanged($event)"/>
+  <button ion-button (click)="takePhoto">Take Photo </button>
 
 </ion-content>
