--- a/src/app/pages/reset-password/reset-password.page.html
+++ b/src/app/pages/reset-password/reset-password.page.html
@@ -1,3 +1,12 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/login"></ion-back-button>
+    </ion-buttons>
+
+    <ion-title>Reset Password</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content padding>
 <form [formGroup]="resetPasswordForm">
   <ion-item>
