Unable to get guard working yet

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -39,6 +39,7 @@
     <ion-button (click)="loginUser(loginForm)" expand="block" [disabled]="!loginForm.valid">
         Log In
     </ion-button>
+    <!--<a [routerLink]="['/tabs']">Go to dashboard</a>-->
 </form>
 
 <ion-button expand="block" fill="clear" routerLink="/register">
