--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,8 +1,8 @@
 <ion-tabs #tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="feed">
+    <ion-tab-button tab="table-list">
       <ion-icon name="information-circle"></ion-icon>
-      <ion-label>Feed</ion-label>
+      <ion-label>Tables</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="uploader">
