--- a/src/app/pages/table-create/table-create.page.html
+++ b/src/app/pages/table-create/table-create.page.html
@@ -1,9 +1,59 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>table-create</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tabs/table-list"></ion-back-button>
+    </ion-buttons>
+    <ion-title>New Table</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <ion-item>
+    <ion-label position="stacked">Table Name</ion-label>
+    <ion-input
+            [(ngModel)]="tableName"
+            type="text"
+            placeholder="What's your table's name?"
+    >
+    </ion-input>
+  </ion-item>
 
+  <ion-item>
+    <ion-label position="stacked">Price</ion-label>
+    <ion-input
+            [(ngModel)]="tablePrice"
+            type="number"
+            placeholder="How much will guests pay?"
+    >
+    </ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="stacked">Cost</ion-label>
+    <ion-input
+            [(ngModel)]="tableCost"
+            type="number"
+            placeholder="How much are you spending?"
+    >
+    </ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Table Date</ion-label>
+    <ion-datetime
+            [(ngModel)]="tableDate"
+            displayFormat="D MMM, YY"
+            pickerFormat="DD MMM YYYY"
+            min="2017"
+            max="2020-12-31"
+    >
+    </ion-datetime>
+  </ion-item>
+
+  <ion-button
+          expand="block"
+          (click)="createTable(tableName, tableDate, tablePrice, tableCost)"
+  >
+    Create Table
+  </ion-button>
 </ion-content>
