Created the ability to add guests to table(not on app)

--- a/src/app/pages/table-list/table-list.page.html
+++ b/src/app/pages/table-list/table-list.page.html
@@ -8,7 +8,7 @@
 <ion-content padding>
 
   <ion-list>
-    <ion-list-header> <ion-label>Your next tables</ion-label> </ion-list-header>
+    <ion-list-header> <ion-label>Your Tables</ion-label> </ion-list-header>
     <ion-item
             tappable
             *ngFor="let table of tableList"
@@ -23,11 +23,11 @@
   </ion-list>
 
   <ion-button expand="block" color="primary" routerLink="/table-create">
-    Create a new Event
+    Create a new Table
   </ion-button>
 
-  <ion-button expand="block" color="primary" routerLink="/table-list">
-    See your events
-  </ion-button>
+  <!--<ion-button expand="block" color="primary" routerLink="/table-list">-->
+    <!--See your events-->
+  <!--</ion-button>-->
 </ion-content>
 
