--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -7,9 +7,42 @@
 
 <ion-content padding>
   <ion-card>
+    <ion-card-header>
+      Table's Revenue:
+      <span
+        [class.profitable]="currentTable?.revenue > 0"
+        [class.no-profit]="currentTable?.revenue < 0 "
+      >
+      {{currentTable?.revenue | currency}}
+    </span>
+    </ion-card-header>
     <ion-card-content>
       <p>Ticket: <strong>${{currentTable?.price}}</strong></p>
       <p>Date: <strong>{{currentTable?.date}}</strong></p>
     </ion-card-content>
   </ion-card>
+
+  <ion-card class="add-guest-form">
+    <ion-card-header> Add Guests </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="stacked">Name</ion-label>
+        <ion-input
+                [(ngModel)]="guestName"
+                type="text"
+                placeholder="What's your guest's name?"
+        ></ion-input>
+      </ion-item>
+
+      <ion-button
+              color="primary"
+              expand="block"
+              (click)="addGuest(guestName)"
+              [disabled]="!guestName"
+      >
+        Add Guest
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+
 </ion-content>
