--- a/src/app/pages/table-detail/table-detail.page.scss
+++ b/src/app/pages/table-detail/table-detail.page.scss
@@ -1,7 +1,16 @@
-ion-toolbar {
-  background-color: var(--ion-color-primary-shade);
+.add-guest-form {
+  ion-card-header {
+    text-align: center;
+  }
+  button {
+    margin-top: 16px;
+  }
 }
 
-ion-title {
-  color: var(--ion-background-color);
+.profitable {
+  color: #22bb22;
+}
+
+.no-profit {
+  color: #ff0000;
 }
