Added a landing page and normalise scss file

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,3 +4,8 @@
 // styles are for the entire app and not just one component. Additionally, this 
 // file can hold Sass mixins, functions, and placeholder classes to be imported 
 // and used throughout the application.
+
+@import "~@ionic/angular/css/normalize.css";
+@import "~@ionic/angular/css/structure.css";
+@import "~@ionic/angular/css/typography.css";
+@import "../assets/scss/normalize";
