--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -1,21 +1,32 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>KaiKing</ion-title>
-  </ion-toolbar>
-</ion-header>
+<!--<ion-header>-->
+  <!--<ion-toolbar>-->
+    <!--<ion-title>KaiKing</ion-title>-->
+  <!--</ion-toolbar>-->
+<!--</ion-header>-->
 
-<ion-content>
+<ion-content fullscreen>
 
-  <ion-button expand="block" fill="clear" routerLink="/login">
-    Login
-  </ion-button>
 
-  <ion-button expand="block" fill="clear" routerLink="/register">
+  <img src="../../assets/icon/logo.png"/>
+
+  <div class="center">
+  <ion-button class="mainButton" size="large" expand="block" routerLink="/register">
     Sign Up
   </ion-button>
 
-  <ion-button expand="block" fill="clear" routerLink="/reset-password">
-    I forgot my password
+  <ion-button fill="outline" routerLink="/login">
+    Login
   </ion-button>
 
+  <ion-button fill="outline" routerLink="/reset-password">
+    I forgot my password
+  </ion-button>
+  </div>
+
 </ion-content>
+
+<ion-footer text-center>
+  <ion-toolbar>
+    <ion-title>Kai King 2019</ion-title>
+  </ion-toolbar>
+</ion-footer>
