--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -6,6 +6,15 @@
 </ion-header>
 
 <ion-content padding>
+
+  <img [src]="photo" >
+
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button (click)="takePicture()">
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
   <ion-card>
     <ion-card-header>
       Table's Revenue:
