--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -25,8 +25,8 @@
 
 </ion-content>
 
-<ion-footer text-center>
-  <ion-toolbar>
-    <ion-title>Kai King 2019</ion-title>
-  </ion-toolbar>
-</ion-footer>
+<!--<ion-footer text-center>-->
+  <!--<ion-toolbar>-->
+    <!--<ion-title>Kai King 2019</ion-title>-->
+  <!--</ion-toolbar>-->
+<!--</ion-footer>-->
