--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -14,7 +14,8 @@
       <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+
+  <ion-fab vertical="top" horizontal="center" slot="fixed">
     <ion-fab-button (click)="takePicture(0)">
       <ion-icon name="add-circle-outline"></ion-icon>
     </ion-fab-button>
