Fixed camera issue so now pictures can upload on firebase and display on screen

--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -7,7 +7,7 @@
 
 <ion-content padding>
 
-  <img [src]="guestPicture" >
+  <img [src]="photo" >
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="takePicture(1)">
