--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,18 +1,18 @@
 <ion-tabs #tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="table-list">
-      <ion-icon name="information-circle"></ion-icon>
-      <ion-label>Tables</ion-label>
+      <ion-icon name="restaurant"></ion-icon>
+      <!--<ion-label>Tables</ion-label>-->
     </ion-tab-button>
 
     <ion-tab-button tab="uploader">
-      <ion-icon name="information-circle"></ion-icon>
-      <ion-label>Uploader</ion-label>
+      <ion-icon name="add-circle-outline"></ion-icon>
+      <!--<ion-label>Uploader</ion-label>-->
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
-      <ion-icon name="information-circle"></ion-icon>
-      <ion-label>Profile</ion-label>
+      <ion-icon name="person"></ion-icon>
+      <!--<ion-label>Profile</ion-label>-->
     </ion-tab-button>
 
   </ion-tab-bar>
