--- a/src/app/pages/uploader/uploader.page.scss
+++ b/src/app/pages/uploader/uploader.page.scss
@@ -35,7 +35,16 @@ ion-icon[name=images] {
   font-size: 35px;
   padding: 15px;
 }
+.centerDiv {
+  padding-top: 50%;
+  padding-bottom: 50%;
+  width: 60%;
+  margin: 0 auto;
+}
 
-p {
-  font-size: 20px;
+.mainButton {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
 }
