Changed the position of the slot in list of tables in edit-image page

--- a/src/app/pages/edit-image/edit-image.page.html
+++ b/src/app/pages/edit-image/edit-image.page.html
@@ -19,7 +19,7 @@
     <ion-item tappable
               *ngFor="let table of tableList">
       <ion-label>{{table.name}}</ion-label>
-      <ion-checkbox slot="end" ></ion-checkbox>
+      <ion-checkbox slot="start" ></ion-checkbox>
     </ion-item>
   </ion-list>
 
