--- a/src/app/pages/edit-image/edit-image.page.html
+++ b/src/app/pages/edit-image/edit-image.page.html
@@ -8,20 +8,45 @@
 </ion-header>
 
 <ion-content padding>
-
   <img [src]="photo" >
 
-  <ion-button class="mainButton" size="small"(click)="takePicture(0)">
+  <ion-item>
+    <ion-label position="stacked">Title</ion-label>
+    <ion-input
+            [(ngModel)]="photoTitle"
+            type="text"
+            placeholder="Name your creation!"
+    >
+    </ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="stacked">Description</ion-label>
+    <ion-input
+            [(ngModel)]="photoDescription"
+            type="text"
+            placeholder="Give us a taster"
+    >
+    </ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="stacked">Share With</ion-label>
+    <ion-list>
+      <ion-item tappable *ngFor="let table of tableList">
+        <ion-label>{{table.name}}</ion-label>
+        <ion-checkbox slot="start" [(ngModel)]="photoTable" (ionChange)="getChanged(table)"></ion-checkbox>
+      </ion-item>
+    </ion-list>
+  </ion-item>
+
+
+  <ion-button
+          expand="block"
+          (click)="uploadPhoto(photoTitle, photoDescription, photoTable)"
+  >
     Upload
   </ion-button>
 
-  <ion-list>
-    <ion-item tappable
-              *ngFor="let table of tableList">
-      <ion-label>{{table.name}}</ion-label>
-      <ion-checkbox slot="start" ></ion-checkbox>
-    </ion-item>
-  </ion-list>
-
-
 </ion-content>
+
