--- a/src/app/pages/edit-image/edit-image.page.html
+++ b/src/app/pages/edit-image/edit-image.page.html
@@ -35,7 +35,7 @@
     <ion-list>
       <ion-item tappable *ngFor="let table of tableList">
         <ion-label>{{table.name}}</ion-label>
-        <ion-checkbox slot="start" [(ngModel)]="photoTable" (ionChange)="getChanged(table)"></ion-checkbox>
+        <ion-checkbox slot="start" [(ngModel)]="photoTable" (ionChange)="getChanged(table, photoTable)"></ion-checkbox>
       </ion-item>
     </ion-list>
   </ion-item>
