--- a/src/app/pages/table-list/table-list.page.html
+++ b/src/app/pages/table-list/table-list.page.html
@@ -12,12 +12,12 @@
     <ion-item
             tappable
             *ngFor="let table of tableList"
-            routerLink="/table-detail/{{ table.id }}"
+            routerLink="/table-detail/{{table.id}}"
     >
       <ion-label>
         <h2>{{table?.name}}</h2>
-        <p>Ticket: <strong>${{table?.price}}</strong></p>
-        <p>Date: <strong>{{table?.date}}</strong></p>
+        <p>Description: <strong>{{table?.description}}</strong></p>
+        <p>Members: <strong></strong></p>
       </ion-label>
     </ion-item>
   </ion-list>
