Redesigned authenitcation pages

--- a/src/app/pages/landing/landing.page.html
+++ b/src/app/pages/landing/landing.page.html
@@ -7,26 +7,18 @@
 <ion-content fullscreen>
 
 
-  <img src="../../assets/icon/logo.png"/>
+  <img src="../../assets/icon/logoWhite2.png"/>
 
   <div class="center">
-  <ion-button class="mainButton" size="large" expand="block" routerLink="/register">
+  <ion-button class="mainButton" expand="block" shape="round" routerLink="/register">
     Sign Up
   </ion-button>
 
-  <ion-button fill="outline" routerLink="/login">
+  <ion-button class="mainButton" expand="block" fill="outline" shape="round" routerLink="/login">
     Login
   </ion-button>
 
-  <ion-button fill="outline" routerLink="/reset-password">
-    I forgot my password
-  </ion-button>
   </div>
 
 </ion-content>
 
-<!--<ion-footer text-center>-->
-  <!--<ion-toolbar>-->
-    <!--<ion-title>Kai King 2019</ion-title>-->
-  <!--</ion-toolbar>-->
-<!--</ion-footer>-->
