--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,64 +1,75 @@
-<ion-header>
-    <ion-toolbar>
+<ion-header no-border>
+    <ion-toolbar >
         <ion-buttons slot="start">
-            <ion-back-button defaultHref=""></ion-back-button>
+            <ion-back-button text="" icon="arrow-round-back" defaultHref=""></ion-back-button>
         </ion-buttons>
-        <ion-title>Login</ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
-<form [formGroup]="loginForm">
-    <ion-item>
-        <ion-label position="stacked">Email</ion-label>
-        <ion-input
-                formControlName="email"
-                type="email"
-                placeholder="Your email address"
-                [class.invalid]="!loginForm.controls['email'].valid &&
-      loginForm.controls['email'].touched"
-        >
-        </ion-input>
-    </ion-item>
-    <ion-item
-            class="error-message"
-            *ngIf="!loginForm.controls['email'].valid &&
-       loginForm.controls['email'].touched"
-    >
-        <ion-label>Please enter a valid email address.</ion-label>
-    </ion-item>
+<ion-content fullscreen>
 
-    <ion-item>
-        <ion-label position="stacked">Password</ion-label>
-        <ion-input
-                formControlName="password"
-                type="password"
-                placeholder="Your password"
-                [class.invalid]="!loginForm.controls['password'].valid&& loginForm.controls['password'].touched"
-        >
-        </ion-input>
-    </ion-item>
-    <ion-item
-            class="error-message"
-            *ngIf="!loginForm.controls['password'].valid
-      && loginForm.controls['password'].touched"
-    >
-        <ion-label>Your password needs more than 6 characters.</ion-label>
-    </ion-item>
+    <h1 class="setupTitle">Login</h1>
 
-    <ion-button (click)="loginUser(loginForm)" expand="block" [disabled]="!loginForm.valid">
-        Log In
-    </ion-button>
-</form>
+    <div class="form">
+
+        <form [formGroup]="loginForm">
+            <ion-item>
+                <ion-label position="stacked">Email</ion-label>
+                <ion-input
+                        formControlName="email"
+                        type="email"
+                        placeholder="Your email address"
+                        [class.invalid]="!loginForm.controls['email'].valid &&
+              loginForm.controls['email'].touched"
+                >
+                </ion-input>
+            </ion-item>
+            <ion-item
+                    class="error-message"
+                    *ngIf="!loginForm.controls['email'].valid &&
+               loginForm.controls['email'].touched"
+            >
+                <ion-label>Please enter a valid email address.</ion-label>
+            </ion-item>
+
+            <ion-item>
+                <ion-label position="stacked">Password</ion-label>
+                <ion-input
+                        formControlName="password"
+                        type="password"
+                        placeholder="Your password"
+                        [class.invalid]="!loginForm.controls['password'].valid&& loginForm.controls['password'].touched"
+                >
+                </ion-input>
+            </ion-item>
+            <ion-item
+                    class="error-message"
+                    *ngIf="!loginForm.controls['password'].valid
+              && loginForm.controls['password'].touched"
+            >
+                <ion-label>Your password needs more than 6 characters.</ion-label>
+            </ion-item>
+
+            <ion-button
+                    class="registerPages"
+                    (click)="loginUser(loginForm)"
+                    expand="block"
+                    [disabled]="!loginForm.valid">
+                Log In
+            </ion-button>
+
+
+        </form>
+
+        <h6 routerLink="/reset-password">
+            Forgot Password?
+        </h6>
+
+    </div>
+
+
 
 
 </ion-content>
 
-<!--<ion-button expand="block" fill="clear" routerLink="/register">-->
-    <!--Create a new account-->
-<!--</ion-button>-->
-
-<!--<ion-button expand="block" fill="clear" routerLink="/reset-password">-->
-    <!--I forgot my password 🙁-->
-<!--</ion-button>-->
