--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,7 +12,7 @@
   --ion-color-primary-tint: #FFD60A;
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary: #4ECDC4;
   --ion-color-secondary-rgb: 12, 209, 232;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
@@ -78,4 +78,5 @@
   --ion-background-color:#F7FFF7;
   --ion-text-color: #1A535C;
   --ion-item-color: #BCBCBC;
+
 }
