--- a/src/assets/scss/normalize.scss
+++ b/src/assets/scss/normalize.scss
@@ -55,12 +55,36 @@ h1.subHeading {
   margin-left: 10%;
 }
 
+h1.tableTitle {
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center !important;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  color: var(--ion-color-secondary);
+
+}
+
 ion-card-header {
   --color: var(--ion-color-secondary);
   font-size: 2em;
   font-weight: bold;
   padding: 0;
 }
+
+tableDetailHeader {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center !important;
+}
+
+p.tableDetail {
+  text-align: center !important;
+  margin: 0px;
+
+}
+
 
 /**
  * Correct the font size and margin on `h6` elements within `section` and
@@ -201,9 +225,32 @@ ion-card.tableList {
     margin-top: 20%;
   }
 
+  div.center {
+    text-align:center;
+    margin-top: 5%;
+  }
+
   ion-button.registerPages {
     margin-top: 15%;
   }
+
+
+  a.roundBtn {
+    margin: 0 15px 0 15px;
+    display:inline-block;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: var(--ion-color-primary);
+    text-align: center;
+    padding: 7px 0;
+  }
+
+  ion-icon.round {
+    color: var(--ion-color-primary-contrast) !important;
+    font-size: 24px;
+  }
+
 
 /**
  * 1. Change the font styles in all browsers.
