Updated uploader page

--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -29,7 +29,7 @@
           <img class="soloImage" src='{{p?.picture}}'/>
         </div>
         <div class="soloImageText">
-          <ion-label>{{p?.photoTitle}}</ion-label><br>
+          <ion-label class="photoTitle">{{p?.photoTitle}}</ion-label><br>
           <ion-label>Description: <strong>{{p?.photoDescription}}</strong></ion-label>
         </div>
       </ion-card>
