--- a/src/app/pages/uploader/uploader.page.html
+++ b/src/app/pages/uploader/uploader.page.html
@@ -8,12 +8,12 @@
 
   <div class="centerDiv">
     <ion-text text-center="center">
-      <p>UPLOAD FROM</p>
+      <h1>Upload from...</h1>
     </ion-text>
-    <ion-button class="mainButton" size="small" (click)="takePicture(1)">
+    <ion-button class="uploader" size="small" (click)="takePicture(1)">
       Camera
     </ion-button>
-    <ion-button class="mainButton" size="small"(click)="takePicture(0)">
+    <ion-button class="uploader" size="small"(click)="takePicture(0)">
       Gallery
     </ion-button>
   </div>
