--- a/src/assets/scss/normalize.scss
+++ b/src/assets/scss/normalize.scss
@@ -65,7 +65,9 @@ h1.tableTitle {
 
 }
 
-
+ion-label.photoTitle {
+  color: var(--ion-color-secondary);
+}
 
 ion-card-header {
   --color: var(--ion-color-secondary);
@@ -234,9 +236,17 @@ ion-card.tableList {
 
   div.soloImage {
     width: 100%;
-    height: 200px;
+    height: 300px;
     overflow-y: hidden;
-    line-height: 200px;
+    align-items: center;
+    background-color: var(--ion-color-primary);
+  }
+
+  div.centerDiv {
+    padding-top: 40%;
+    padding-bottom: 50%;
+    width: 60%;
+    margin: 0 auto;
   }
 
   div.soloImageText {
@@ -249,6 +259,18 @@ ion-card.tableList {
 
   ion-button.registerPages {
     margin-top: 15%;
+  }
+
+  ion-button.uploader {
+    --background: var( --ion-color-success);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    --border-radius: 50px;
+    font-size: 24px;
+    margin-top: 10%;
+
   }
 
 
@@ -270,6 +292,11 @@ ion-card.tableList {
 
   ion-card.pictureCard {
   object-fit: contain;
+    margin-left: -20px;
+    margin-right: -20px;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    width: 120%;
 
   }
 
