--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -36,7 +36,7 @@
   --ion-color-success-tint: #28e070;
 
   /** warning **/
-  --ion-color-warning: #ffce00;
+  --ion-color-warning: #fad211;
   --ion-color-warning-rgb: 255, 206, 0;
   --ion-color-warning-contrast: #ffffff;
   --ion-color-warning-contrast-rgb: 255, 255, 255;
@@ -77,6 +77,6 @@
 
   --ion-background-color:#F7FFF7;
   --ion-text-color: #1A535C;
-  --ion-item-color: #BCBCBC;
+  --ion-item-color:  #FF6B6B;
 
 }
