--- a/src/app/pages/profile-settings/profile-settings.page.html
+++ b/src/app/pages/profile-settings/profile-settings.page.html
@@ -1,9 +1,8 @@
-<ion-header>
+<ion-header no-border>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/tabs/profile"></ion-back-button>
+      <ion-back-button text="" icon="arrow-round-back" defaultHref="/tabs/profile"></ion-back-button>
     </ion-buttons>
-    <ion-title>Profile Page</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="logOut()">
         <ion-icon slot="icon-only" name="log-out"></ion-icon>
@@ -14,13 +13,15 @@
 
 
 <ion-content padding>
+  <h1>Settings</h1>
+
   <ion-list> <ion-list-header> Personal Information </ion-list-header> </ion-list>
 
   <ion-item (click)="updateName()">
     <ion-label>
       <ion-grid>
         <ion-row>
-          <ion-col class="text-left" size="5"> Name </ion-col>
+          <ion-col class="text-left" size="5">Name </ion-col>
           <ion-col
                   class="text-center"
                   size="7"
@@ -41,7 +42,7 @@
   </ion-item>
 
   <ion-item>
-    <ion-label class="dob-label">Date of Birth</ion-label>
+    <ion-label class="text-left" size="5">Date of Birth</ion-label>
     <ion-datetime
             displayFormat="MMM D, YYYY"
             pickerFormat="D MMM YYYY"
