--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,21 +1,8 @@
-ion-list-header {
-  background-color: var(--ion-color-primary-shade);
+
+.tableTitle {
+  color: var(--ion-color-success);
 }
 
-.text-center {
-  text-align: center;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.placeholder-profile {
-  color: #cccccc;
-}
-
-.dob-label {
-  color: #000000 !important;
-  padding: 10px !important;
-  max-width: 50% !important;
+.roundBtn {
+  background-color: var(--ion-color-success);
 }
