Re-did adding guest to make it a modal and add chefs instead

--- a/src/app/pages/table-list/table-list.page.html
+++ b/src/app/pages/table-list/table-list.page.html
@@ -18,7 +18,7 @@
 
         <ion-card-header>{{table?.name}}</ion-card-header>
         <p>{{table?.description}}</p>
-        <p>Members: <strong *ngFor="let guest of table?.guests">{{guest?.guestName}}, </strong></p>
+        <p>Chefs: <strong *ngFor="let guest of table?.guests">{{guest?.guestName}}, </strong></p>
     </ion-card>
 
   </ion-list>
