--- a/src/app/pages/table-detail/table-detail.page.html
+++ b/src/app/pages/table-detail/table-detail.page.html
@@ -14,12 +14,12 @@
     <p class="tableDetail">{{currentTable?.description}}</p>
     <p class="tableDetail">Chefs: <strong *ngFor="let guest of currentTable?.guests">{{guest?.guestName}}, </strong></p>
     <div class="center">
-    <a class="roundBtn"  (click)="goToUploader()">
-      <ion-icon class="round" name="camera" ></ion-icon>
-    </a>
-    <a class="roundBtn"  (click)="goToUploader()">
-      <ion-icon class="round" name="person-add" ></ion-icon>
-    </a>
+      <a class="roundBtn"  (click)="goToUploader()">
+        <ion-icon class="round" name="camera" ></ion-icon>
+      </a>
+      <a class="roundBtn"  (click)="presentModal()">
+        <ion-icon class="round" name="person-add" ></ion-icon>
+      </a>
     </div>
   </div>
 
@@ -37,35 +37,35 @@
 
 
 
-  <ion-card class="add-guest-form">
-    <ion-card-header> Add Guests </ion-card-header>
-    <ion-card-content>
-      <ion-row>
-        <ion-col size="8">
-          <ion-item>
-            <ion-label position="stacked">Name</ion-label>
-            <ion-input
-                    [(ngModel)]="guestName"
-                    type="text"
-                    placeholder=""
-            ></ion-input>
-          </ion-item>
-        </ion-col>
+  <!--<ion-card class="add-guest-form">-->
+    <!--<ion-card-header> Add Guests </ion-card-header>-->
+    <!--<ion-card-content>-->
+      <!--<ion-row>-->
+        <!--<ion-col size="8">-->
+          <!--<ion-item>-->
+            <!--<ion-label position="stacked">Name</ion-label>-->
+            <!--<ion-input-->
+                    <!--[(ngModel)]="guestName"-->
+                    <!--type="text"-->
+                    <!--placeholder=""-->
+            <!--&gt;</ion-input>-->
+          <!--</ion-item>-->
+        <!--</ion-col>-->
 
 
-      </ion-row>
-      <span *ngIf="guestPicture">Picture taken!</span>
+      <!--</ion-row>-->
+      <!--<span *ngIf="guestPicture">Picture taken!</span>-->
 
-      <ion-button
-              color="primary"
-              expand="block"
-              (click)="addGuest(guestName)"
-              [disabled]="!guestName"
-      >
-        Add Guest
-      </ion-button>
-    </ion-card-content>
-  </ion-card>
+      <!--<ion-button-->
+              <!--color="primary"-->
+              <!--expand="block"-->
+              <!--(click)="addGuest(guestName)"-->
+              <!--[disabled]="!guestName"-->
+      <!--&gt;-->
+        <!--Add Guest-->
+      <!--</ion-button>-->
+    <!--</ion-card-content>-->
+  <!--</ion-card>-->
 
 </ion-content>
 
