Can change colour on tab icons when clicked

--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,14 +1,14 @@
 <ion-tabs #tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button class="table-List" tab="table-list">
-      <ion-icon name="restaurant"></ion-icon>
+    <ion-tab-button class="table-list" tab="table-list" >
+      <ion-icon class="table-List" name="restaurant"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="uploader">
+    <ion-tab-button class="uploader" tab="uploader">
       <ion-icon name="add-circle-outline"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="profile">
+    <ion-tab-button class="profile" tab="profile">
       <ion-icon name="person"></ion-icon>
     </ion-tab-button>
 
