--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -78,5 +78,5 @@
   --ion-background-color:#F7FFF7;
   --ion-text-color: #1A535C;
   --ion-item-color:  #FF6B6B;
-
+--ion-color-selected: #4ECDC4;
 }
